Added buyer rating

--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -61,6 +61,9 @@
                 <a class="nav-link" href="updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="buyer_orders">Orders</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="chat">Chat</a>
               </li>
               <li class="nav-item">
