--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -33,7 +33,8 @@
 <body>
   
     {{{body}}}
-
+    
+    {{{_sections.script}}}
     <div id="preloader">
       <div class="sk-circle">
         <div class="sk-circle1 sk-child"></div>
@@ -50,7 +51,8 @@
         <div class="sk-circle12 sk-child"></div>
       </div>
     </div>
-    
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/static/js/chat.js"></script>
     <script type="text/javascript" src="/static/js/jquery-min.js"></script>
     <script type="text/javascript" src="/static/js/popper.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
@@ -60,8 +62,7 @@
     <script type="text/javascript" src="/static/js/wow.js"></script>
     <script type="text/javascript" src="/static/js/jquery.slicknav.js"></script>
     <script type="text/javascript" src="/static/js/nivo-lightbox.js"></script>
-    <script type="text/javascript" src="/static/js/main.js"><}/script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </body>
