--- a/src/views/updatecrops.hbs
+++ b/src/views/updatecrops.hbs
@@ -52,19 +52,19 @@
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
-                <a class="nav-link" href="dashboard">Dashboard</a>
+                <a class="nav-link" href="/users/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="notifications">Notifications</a>
+                <a class="nav-link" href="/users/notifications">Notifications</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="updateprofile">Update Profile</a>
+                <a class="nav-link" href="/users/updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="chat">Chat</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="logout">Logout</a>
+                <a class="nav-link" href="/users/logout">Logout</a>
               </li>
             </ul>
           </div>
@@ -72,19 +72,19 @@
 
         <ul class="mobile-menu">
           <li>
-            <a class="page-scroll" href="dashboard">Dashboard</a>
+            <a class="page-scroll" href="/users/dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="page-scroll" href="notifications">Notifications</a>
+            <a class="page-scroll" href="/users/notifications">Notifications</a>
           </li>
           <li>
-            <a class="page-scroll" href="updateprofile">Update Profile</a>
+            <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
           </li>
           <li>
             <a class="page-scroll" href="chat">Chat</a>
           </li>
           <li>
-            <a class="page-scroll" href="logout">Logout</a>
+            <a class="page-scroll" href="/users/logout">Logout</a>
           </li>
         </ul>
       </nav>
