--- a/src/views/viewfarmers.hbs
+++ b/src/views/viewfarmers.hbs
@@ -22,32 +22,32 @@
     }
 
     .stars-outer {
-  position: relative;
-  display: inline-block;
-}
+      position: relative;
+      display: inline-block;
+    }
 
-.stars-inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  width: 0;
-}
+    .stars-inner {
+      position: absolute;
+      top: 0;
+      left: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      width: 0;
+    }
 
-.stars-outer::before {
-  content: "\f005 \f005 \f005 \f005 \f005";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  color: #ccc;
-}
+    .stars-outer::before {
+      content: "\f005 \f005 \f005 \f005 \f005";
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      color: #ccc;
+    }
 
-.stars-inner::before {
-  content: "\f005 \f005 \f005 \f005 \f005";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  color: #f8ce0b;
-}
+    .stars-inner::before {
+      content: "\f005 \f005 \f005 \f005 \f005";
+      font-family: "Font Awesome 5 Free";
+      font-weight: 900;
+      color: #f8ce0b;
+    }
 
     {{/section}}
   
@@ -139,7 +139,7 @@
     <div class="row">
       <div class="col-lg-2"></div>
       <div class="col-lg-4 col-12">
-        <div class="card" style="opacity: 90%; height: 250px; margin-bottom: 20px; text-align:center">
+        <div class="card" style="opacity: 90%; height: 300px; margin-bottom: 20px; text-align:center">
           <div class="card-body">
             <h5 class="card-title">Name : {{this.1.fullname}}</h5>
             <p class="card-text">Number of deals : {{this.1.deals}}</p>
@@ -162,14 +162,14 @@
       </div>
       {{#if this.3.fullname}}
       <div class="col-lg-4 col-12">
-        <div class="card" style="opacity: 90%; height: 250px; margin-bottom: 20px; text-align:center">
+        <div class="card" style="opacity: 90%; height: 300px; margin-bottom: 20px; text-align:center">
           <div class="card-body">
             <h5 class="card-title">Name : {{this.3.fullname}} </h5>
             <p class="card-text">Number of deals : {{this.3.deals}}</p>
             <p class="card-text">Number of orders : {{this.3.orders}}</p>
             <p class="card-text">Ratings : {{this.3.rating}}
               <div class="stars-outer" id="stars-outer{{this.3._id}}">
-                <div class="stars-inner" id="stars-inner{{this.3._id}}" style="width:{{this.3.rating}}";;color="#f8ce0b">
+                <div class="stars-inner" id="stars-inner{{this.3._id}}" style="width:{{this.3.rating}}; color: #f8ce0b">
                 </div>
             </div>
             </p>
@@ -189,7 +189,28 @@
       <div class="col-lg-2"></div>
     </div>
     <br><br>
-    
+    <script >
+// Initial Ratings
+    var rating = {{this.1.rating}}
+    var id  =  {{this.1._id}}
+    // Total Stars
+    var starsTotal = 5;
+
+    // Run getRatings when DOM loads
+    //document.addEventListener('DOMContentLoaded', getRatings);
+    // Get ratings
+    (function () {
+      
+        // Get percentage
+        var starPercentage = (rating / starsTotal) * 100;
+
+        // Round to nearest 10
+        //var starPercentageRounded = `${Math.round(starPercentage / 10) * 10}%`;
+
+        // Set width of stars-inner to percentage
+        document.querySelector(`#stars-inner` + id).style.width = starPercentage;
+    })();
+</script>
     {{/each}}
     {{/if}}
   </div>
