--- a/src/views/chat_app_buyer.hbs
+++ b/src/views/chat_app_buyer.hbs
@@ -79,7 +79,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height:70px" alt=""/>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
             <ul class="navbar-nav mr-auto w-100">
@@ -92,8 +92,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="/users/updateprofile">Update Profile</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users/buyer_orders">Orders</a>
+              </li>
               <li class="nav-item active">
-                <a class="nav-link" href="/chat/chat_app">Chat</a>
+                <a class="nav-link" href="/chat/chat_list">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
@@ -111,6 +114,9 @@
           </li>
           <li>
             <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="/users/buyer_orders">Orders</a>
           </li>
           <li>
             <a class="page-scroll" href="/chat/chat_app">Chat</a>
