--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -61,7 +61,7 @@
                 <a class="nav-link" href="updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="chat">Chat</a>
+                <a class="nav-link" href="/chat/chat_app">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
@@ -81,7 +81,7 @@
             <a class="page-scroll" href="updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="chat">Chat</a>
+            <a class="page-scroll" href="/chat/chat_app">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="logout">Logout</a>
@@ -136,8 +136,8 @@
     </div>
     <br>
     <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-4" style="margin-bottom: 30px;">
         <div class="card" style="opacity: 90%; height: 250px">
           <div class="card-body">
             <form id="requirements" action="crop_requirements" method="POST">
@@ -147,19 +147,14 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col">
-                <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;">Add Requirements</button>
+                <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</button>
               </div>
             </div>
             </form>
           </div>
         </div>
       </div>
-      <div class="col-lg-4"></div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col">
+      <div class="col-lg-4" style="margin-bottom: 30px;">
         <div class="card" style="opacity: 90%; height: 250px">
           <div class="card-body">
             <form action="deal_lock" method="POST">
@@ -177,6 +172,6 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4"></div>
+      <div class="col-lg-2"></div>
     </div>
   </div>
