--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="buyer_orders">Orders</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="chat">Chat</a>
+                <a class="nav-link" href="/chat/chat_app">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="logout">Logout</a>
@@ -84,7 +84,10 @@
             <a class="page-scroll" href="updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="chat">Chat</a>
+            <a class="page-scroll" href="buyer_orders">Orders</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="/chat/chat_app">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="logout">Logout</a>
