--- a/src/views/chat_app_farmer.hbs
+++ b/src/views/chat_app_farmer.hbs
@@ -1,6 +1,3 @@
-{{#section 'link'}}
-<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
-{{/section}}
 {{#section 'style'}}
     .cover {
       display: flex;
@@ -19,34 +16,6 @@
       bottom: 0;
       min-width: 100%;
       min-height: 100%;
-    }
-
-    .stars-outer {
-      position: relative;
-      display: inline-block;
-    }
-
-    .stars-inner {
-      position: absolute;
-      top: 0;
-      left: 0;
-      white-space: nowrap;
-      overflow: hidden;
-      width: calc(var(--a) * var(--r));
-    }
-
-    .stars-outer::before {
-      content: "\f005 \f005 \f005 \f005 \f005";
-      font-family: "Font Awesome 5 Free";
-      font-weight: 900;
-      color: #ccc;
-    }
-
-    .stars-inner::before {
-      content: "\f005 \f005 \f005 \f005 \f005";
-      font-family: "Font Awesome 5 Free";
-      font-weight: 900;
-      color: #f8ce0b;
     }
 
     {{/section}}
@@ -79,21 +48,21 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height:70px" alt=""/>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="/users/dashboard">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/users/viewfarmers">View Farmer's Profiles</a>
+                <a class="nav-link" href="/users/notifications">Notifications</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/updateprofile">Update Profile</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="/chat/chat_app">Chat</a>
+              <li class="nav-item">
+                <a class="nav-link" href="/chat/chat_app_farmer">Chat</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/users/logout">Logout</a>
@@ -107,13 +76,13 @@
             <a class="page-scroll" href="/users/dashboard">Dashboard</a>
           </li>
           <li>
-            <a class="page-scroll" href="/users/viewfarmers">View Farmer's Profiles</a>
+            <a class="page-scroll" href="/users/notifications">Notifications</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/updateprofile">Update Profile</a>
           </li>
           <li>
-            <a class="page-scroll" href="/chat/chat_app">Chat</a>
+            <a class="page-scroll" href="/chat/chat_app_farmer">Chat</a>
           </li>
           <li>
             <a class="page-scroll" href="/users/logout">Logout</a>
@@ -126,23 +95,17 @@
        <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 90%;">Chat list</span> 
     </h1>
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4 col-12">
             <a href="" style="color: black;">
-            <div class="card" style="opacity: 90%; height: 80px;">
+            <div class="card" style="opacity: 90%; height: 90px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
                         <div class="col-8">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
+                            <h5 class="card-title" style="margin-bottom: 2px;">Buyer</h5>
+                            <p class="card-text">Crop requirements : Tomato, potato, rice</p>
                         </div>
                         <div class="col-4">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
-                                    </div>
-                                </div>
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -151,23 +114,17 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4 col-12">
             <a href="" style="color: black;">
-            <div class="card" style="opacity: 90%; height: 80px;">
+            <div class="card" style="opacity: 90%; height: 90px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
                         <div class="col-8">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
+                            <h5 class="card-title" style="margin-bottom: 2px;">Investor</h5>
+                            <p class="card-text">Investment range : 10000-20000 INR</p>
                         </div>
                         <div class="col-4">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
-                                    </div>
-                                </div>
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -176,23 +133,18 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-3"></div>
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-4"></div>
+        <div class="col-lg-4 col-12">
             <a href="" style="color: black;">
-            <div class="card" style="opacity: 90%; height: 80px;">
+            <div class="card" style="opacity: 90%; height: 90px;">
                 <div class="card-body" style="padding: 10px;">
                     <div class="row">
                         <div class="col-8">
-                            <h5 class="card-title" style="margin-bottom: 2px;">Rohit Sharma</h5>
-                            <p class="card-text">Crops grown : Tomato, potato, rice</p>
+                            <h5 class="card-title" style="margin-bottom: 2px;">Institution</h5>
+                            <p class="card-text">Crop requirements : Tomato, potato, rice</p>
+                            <p class="card-text">Investment range : 10000-20000 INR</p>
                         </div>
                         <div class="col-4">
-                            <p class="card-text">Rating : 5
-                                <div class="stars-outer" id="stars-outer{{this.1._id}}">
-                                    <div class="stars-inner" id="stars-inner{{this.1._id}}" style="color:#f8ce0b; --r:20%; --a:{{this.1.rating}}">
-                                    </div>
-                                </div>
-                            </p>
                         </div>
                     </div>
                 </div>
@@ -200,5 +152,4 @@
             </a>
         </div>
     </div>
-    </a>
 </div>
