--- a/src/views/registerinvestor.hbs
+++ b/src/views/registerinvestor.hbs
@@ -54,6 +54,7 @@
                           class="form-control"
                           placeholder="Full Name"
                           name="registername"
+                          required
                         />
                       </div>
                     </div>
@@ -64,6 +65,7 @@
                           class="form-control"
                           placeholder="Username"
                           name="username"
+                          required
                         />
                       </div>
                     </div>
@@ -74,6 +76,7 @@
                           class="form-control"
                           placeholder="Email Id"
                           name="email"
+                          required
                         />
                       </div>
                     </div>
@@ -84,6 +87,7 @@
                           class="form-control"
                           placeholder="Password"
                           name="password"
+                          required
                         />
                       </div>
                     </div>
@@ -94,6 +98,7 @@
                           class="form-control"
                           placeholder="Confirm Password"
                           name="password2"
+                          required
                         />
                       </div>
                     </div>
@@ -104,6 +109,7 @@
                           class="form-control"
                           placeholder="Pan number"
                           name="pannumber"
+                          required
                         />
                       </div>
                     </div>
