--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -20,7 +20,7 @@
     <!--fa fa icon-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
     {{{_sections.link}}}
     <title>Organique</title>
     <style>
@@ -51,6 +51,10 @@
         <div class="sk-circle12 sk-child"></div>
       </div>
     </div>
+    
+        
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/chat.js"></script>
     <script type="text/javascript" src="/static/js/jquery-min.js"></script>
